2008-12-06  Philip Withnall  <philip@tecnocode.co.uk>

	* src/link-factories/calendar.c (get_links):
	* src/links/calendar-appointment.c
	(almanah_calendar_appointment_link_finalize),
	(almanah_calendar_appointment_link_new),
	(almanah_calendar_appointment_link_format_value),
	(almanah_calendar_appointment_link_view):
	* src/links/calendar-appointment.h:
	* src/links/calendar-task.c
	(almanah_calendar_task_link_format_value),
	(almanah_calendar_task_link_view): Allow appointment and task links to
	be viewed by spawning Evolution.
	* src/main-window.c (clear_factory_links), (mw_links_updated_cb):
	Fix a memory leak caused by not unreffing some links.

2008-12-06  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* data/almanah.ui:
	* src/Makefile.am:
	* src/add-definition-dialog.c
	(almanah_add_definition_dialog_class_init),
	(almanah_add_definition_dialog_init),
	(almanah_add_definition_dialog_dispose),
	(almanah_add_definition_dialog_finalize),
	(almanah_add_definition_dialog_get_property),
	(almanah_add_definition_dialog_set_property),
	(almanah_add_definition_dialog_new), (destroy_extra_widgets),
	(response_cb), (add_type_combo_box_changed_cb),
	(almanah_add_definition_dialog_get_text),
	(almanah_add_definition_dialog_set_text),
	(almanah_add_definition_dialog_get_definition):
	* src/add-definition-dialog.h:
	* src/add-link-dialog.c:
	* src/add-link-dialog.h:
	* src/definition.c (almanah_definition_class_init),
	(almanah_definition_init), (almanah_definition_finalize),
	(almanah_definition_get_property),
	(almanah_definition_set_property), (almanah_definition_new),
	(almanah_definition_get_type_id), (almanah_definition_get_name),
	(almanah_definition_get_description),
	(almanah_definition_get_icon_name), (almanah_definition_view),
	(almanah_definition_build_dialog),
	(almanah_definition_close_dialog), (almanah_definition_parse_text),
	(almanah_definition_get_text), (almanah_definition_set_text),