@@ -22,6 +22,7 @@
 #include <gtk/gtk.h>
 
 #include "entry.h"
+#include "main.h"
 
 static void almanah_entry_init (AlmanahEntry *self);
 static void almanah_entry_finalize (GObject *object);
@@ -237,6 +238,10 @@ almanah_entry_get_editability (AlmanahEntry *self)
 {
 	GDate current_date;
 	gint days_between;
+
+	/* Entries are always editable if we have import mode on */
+	if (almanah->import_mode == TRUE)
+		return ALMANAH_ENTRY_EDITABLE;
 
 	g_date_set_time_t (&current_date, time (NULL));
 
