@@ -47,6 +47,7 @@ typedef struct {
 #endif /* ENABLE_ENCRYPTION */
 
 	gboolean debug;
+	gboolean import_mode;
 } Almanah;
 
 Almanah *almanah;
